# DynAIkonTrap

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  dynaikontrap-config  dyntrap-config.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  tuner.py
DynAIkonTrap/: __main__.py  camera.py  camera_to_disk.py  comms.py  imdecode.py  logging.py  sensor.py  settings.json  settings.py  tuner.py  video_buffers.py
DynAIkonTrap/filtering/: animal.py  event.py  filtering.py  motion.py  motion_queue.py  mvector_sum.pyx  remember_from_disk.py
DynAIkonTrap/server/: html_generator.py  web_serve.py
docs/: README.md  docker-build-documentation.sh
docs/source/: about.rst  conf.py  deploying-dynaikontrap.rst  dev-docs.rst  fastcat-edge.rst  index.rst  installing-dynaikontrap.rst  pipelines.rst  preparing-the-raspberry-pi.rst  revisions.rst  running-dynaikontrap.rst  tuning.rst  user-docs.rst  web-viewer.rst
docs/source/dev-docs/: build-docs.rst
docs/source/pipelines/: legacy.rst  low-powered.rst
docs/source/user-docs/: assembly-and-deployment.rst  how-it-works.rst  installing-dynaikontrap.rst  preparing-raspberrypi-camera.rst  preparing-raspberrypi-os.rst  quick-start.rst  running.rst  software-setup.rst  tuning.rst  web-viewer.rst
docs/source/user-docs/how-it-works/: legacy.rst  low-powered.rst
docs/source/user-docs/software-setup/: flashing.rst  running.rst  (+2 more)
dynaikontrap-metapackage/: README  dynaikontrap-meta  dynaikontrap-meta_1.5.1_all.deb
html/: fov.html
test/: test_comms.py  test_decode.py  test_motion_queue.py
test/data/event_example/: clip.h264
