[metadata]
name = DynAikonTrap
version = 1.0.0
author = Ryan Rueger
author_email = rrueger@dynaikon.com
description = DynAikon's animal camera trapping software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.dynaikon.com/dynaikontrap/dynaikontrap
project_urls =
    Bug Tracker = https://gitlab.dynaikon.com/dynaikontrap/dynaikontrap/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = src
packages = find:
python_requires = >=3.6
install_requires =
  picamera==1.13
  pyserial==3.4
  requests==2.24.0
  urllib3==1.25.9
  opencv-python-headless==4.4.0.44
  scipy
  Pillow==8.4.0
  tflite_runtime @ https://github.com/google-coral/pycoral/releases/download/v2.0.0/tflite_runtime-2.5.0.post1-cp37-cp37m-linux_armv7l.whl

[options.entry_points]
console_scripts =
    dynaikontrap = DynAIkonTrap.__main__:main
